* Update unit tests to run with latest SDK * Update Hello World Instruction set to remove bug * Update some comments