@@ -5,12 +5,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
-import org.junit.After;
-import org.junit.AfterClass;
-import org.junit.Before;
-import org.junit.BeforeClass;
-import org.junit.Test;
-
 import android.test.AndroidTestCase;
 
 import com.slickpath.mobile.android.simple.vm.instructions.Instructions;
@@ -25,27 +19,17 @@ public class CommandListTest extends AndroidTestCase {
 	private CommandList testList1 = null;
 
 	private final Integer COMMAND_1 =  Integer.valueOf(Instructions._PUSHC);
-	private final Integer COMMAND_PARAM_VAL_1 = new Integer(TEST_PARAM_VAL1);
+	private final Integer COMMAND_PARAM_VAL_1 = Integer.valueOf(TEST_PARAM_VAL1);
 	private final List<Integer> COMMAND_PARAM_LIST_1 = new ArrayList<Integer>(Arrays.asList(COMMAND_PARAM_VAL_1));
 
 	private final Integer COMMAND_2 =  Integer.valueOf(Instructions._PUSH);
-	private final Integer COMMAND_PARAM_VAL_2 = new Integer(TEST_PARAM_VAL2);
+	private final Integer COMMAND_PARAM_VAL_2 = Integer.valueOf(TEST_PARAM_VAL2);
 	private final List<Integer> COMMAND_PARAM_LIST_2 = new ArrayList<Integer>(Arrays.asList(COMMAND_PARAM_VAL_2));
 
 	private final Integer COMMAND_3 =  Integer.valueOf(Instructions._ADD);
 	private final List<Integer> COMMAND_PARAM_LIST_3 = null;
 
-
-	@BeforeClass
-	public static void setUpBeforeClass() throws Exception {
-	}
-
-	@AfterClass
-	public static void tearDownAfterClass() throws Exception {
-	}
-
 	@Override
-	@Before
 	protected void setUp() throws Exception {
 		super.setUp();
 		testList1 = new CommandList();
@@ -55,12 +39,10 @@ public class CommandListTest extends AndroidTestCase {
 	}
 
 	@Override
-	@After
 	protected void tearDown() throws Exception {
 		super.tearDown();
 	}
 
-	@Test
 	public void testCommands() {
 		assertEquals(testList1.size(), 3);
 		assertNotNull(testList1.get(0));
